canary/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: canary-ingress
  namespace: argo-sample-app
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: "nginx"
  rules:
  - host: canary.armyost.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: rollout-canary-service
            port:
              number: 80
